## 2025-08-16 (0.8.9) - OAuth Legacy Pattern Implementation
- **OAUTH REFACTORED TO MATCH LEGACY ONYX**: Complete rewrite to follow battle-tested legacy pattern:
  - **BACKEND REDIRECTS**: Google now redirects directly to backend (not frontend)
  - **REDIS STATE MANAGEMENT**: OAuth state stored in Redis with UUID keys for security
  - **USER AUTHENTICATION**: OAuth flows now require authenticated users (get_current_user)
  - **LEGACY CREDENTIAL FORMAT**: Matches exact credential structure from legacy Onyx
  - **STATE VALIDATION**: Proper OAuth state validation prevents CSRF attacks
  - **SESSION CLEANUP**: Redis sessions cleaned up after successful OAuth
- **SECURITY ENHANCEMENTS**:
  - **UUID-based state**: Base64-encoded UUID state parameters
  - **Redis expiry**: 10-minute OAuth session timeout
  - **User context**: Credentials properly tied to users and organizations
  - **IP tracking**: Client IP addresses recorded for audit
- **CALLBACK URLS REVERTED**: Back to backend callbacks:
  - `http://localhost:8000/oauth/google/gmail/callback`
  - `http://localhost:8000/oauth/google/drive/callback`
- **FRONTEND INTEGRATION**: Backend redirects to frontend with success/error parameters

## 2025-08-16 (0.8.8) - OAuth Flow Architecture Fix  
- **OAUTH FLOW CORRECTED**: Fixed OAuth flow to follow proper frontend-to-backend pattern:
  - **FRONTEND REDIRECT**: Google now redirects to frontend (port 5173) instead of backend (port 8000)
  - **PROPER SEPARATION**: Frontend handles OAuth callbacks, backend handles token exchange and storage
  - **REACT ROUTES**: Added `/oauth/:provider/callback` routes for Gmail and Google Drive
  - **OAUTH COMPONENT**: Created OAuthCallback component with proper error handling and user feedback
  - **SEAMLESS UX**: Automatic redirect back to connectors page after successful OAuth
- **UPDATED CALLBACK URLS**: New Google Cloud Console redirect URIs:
  - `http://localhost:5173/oauth/gmail/callback`
  - `http://localhost:5173/oauth/drive/callback`